[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/LobbyViewer/LobbyViewer.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 451.0
margin_top = 100.0
margin_right = 573.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 400 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 115.0
margin_bottom = 393.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 386.0

[node name="StartGameButton" type="Button" parent="CenterContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Start game"

[node name="DisconnectButton" type="Button" parent="CenterContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Disconnect"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/PanelContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 386.0
rect_min_size = Vector2( 20, 0 )

[connection signal="pressed" from="CenterContainer/PanelContainer/HBoxContainer/VBoxContainer/StartGameButton" to="." method="StartGamePressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/HBoxContainer/VBoxContainer/DisconnectButton" to="." method="DisconnectPressed"]
